source/style.css
a {
	cursor: default;
}

.Layer {
	position:    fixed;
	background:  white;
	top:         0px;
	left:        120%;
	bottom:      30px;
	width:       100%;
	box-shadow:  0px 0px 30px rgba(0, 0, 0, 0.5);
	overflow-y:  auto;
	overflow-x:  hidden;
}

.animate .Layer {
	transition: 0.3s;
}

.Layer.visible {
	left: 0%;	
}

.MultiButton {
	position:   fixed;
	bottom:     0px;
	background: white;
	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
}

.MultiButton .Input {
	display: table-cell;
	width:   100%;
	border:  none;
}

.Input input {
	width:   inherit;
	display: block;
}

.Timer {
	background:    #555;
	color:         white;
	position:      absolute;
	right:         3px;
	top:           3px;
	font-style:    normal;
	line-height:   7pt;
	padding:       3px 6px;
	font-size:     8pt;
	border-radius: 3px;
	border:        white 1px solid;
	box-shadow:    0px 0px 3px rgba(0, 0, 0, 0.5);
}

.hidden {
	display: none;
}

.Remove {
	background: url('icons/x-white.png') #E36C43 no-repeat center center;
	width:      23px;
	height:     19px;
	position:   absolute;
	left:       2px;
	top:        2px;
	display:    block;
	opacity:    0;
}

.animate .Remove {
	transition: 0.15s;
}

.Remove:hover {
	transition: 0s;
	opacity:    1;
}

.Arrow {
	background: url('icons/next.png') no-repeat center 6px;
	width:      16px;
	height:     16px;
	position:   absolute;
	top:        0px;
	left:       0px;
	width:      100%;
	height:     29px;
}

.animate .Arrow {
	transition: .3s;
}

.on .Arrow {
	transform: rotate(-180deg);
}

.Folder a {
	position: relative;
}

.Slider {
	display: block;
	margin: 4px;
}

.Slider input{
	width:          50px;
	vertical-align: middle;
	margin-right:   5px;
	text-align:     center;
	background:     white;
	border:         1px solid #777;
	color:          black;
}

.Slider input[type=range] {
	width: 200px;
}

.Checkbox {
	display: block;
}

.Checkbox input {
	vertical-align: top;
}

.Select {
	display: block;
}

.Select select {
	display:        inline-block;
	vertical-align: middle;
	margin:         5px;
}

input[type=button] {
	margin-left : 4px;
}

